--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "goit-js-hw-12-countries",
+  "name": "goit-js-hw-10-food-service",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://dmytrosem-tech.github.io/goit-js-hw-12-countries",
+  "homepage": "https://dmytrosem-tech.github.io/goit-js-hw-10-food-service",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-12-countries/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/"
   },
   "repository": {
     "type": "git",
